test/invalid/KeywordsCapitalLetterElse/KeywordsCapitalLetterElse.plume
/**
 * Keyword com letra maiuscula: else
 *
 * @author 37059, Rita Henriques
 * @version $Id: KeywordsCapitalLetterElse.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 class KeywordsCapitalLetterElse extends Object is
 
  method main : () -> String is
		getTempo(1).toString()

  method getTempo : (tempo : Integer) -> String is
		if tempo == 0
		then "Sol"
		Else "Chuva"

